--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -12,3 +12,8 @@
 @import "../home/trending";
 @import "../home/homeSponsored/sponsoreds";
 @import "../home/homeSponsored/sponsoredPost";
+@import "../home/storySlider/storyModal";
+@import "../home/storySlider/silkSlider";
+@import "../home/storySlider/storyProfile";
+@import "../home/storySlider/storyReply";
+@import "../home/storySlider/storyTimer";
