--- a/component/re-usabelComponent/friendsList/requestCard/index.scss
+++ b/component/re-usabelComponent/friendsList/requestCard/index.scss
@@ -60,27 +60,28 @@
     .freind_request {
         .btn-primary {
             background: linear-gradient(90deg, #c39eff 0%, #a576f3 100%);
-
+            box-shadow: rgba(75, 9, 232, 0.45) 0px 5px 10px;
             color: #ffffff;
         }
     }
     .all_freinds {
         .btn-primary {
             background: linear-gradient(90deg, #ef843b 0%, #ffa567 100%);
-
+            box-shadow: rgba(232, 154, 9, 0.45) 0px 5px 10px;
             color: #ffffff;
         }
     }
     .close_friends {
         .btn-primary {
             background: linear-gradient(93.15deg, #1a83cf -11.17%, #5fb5f4 48.61%, #2da6ff 96.45%);
-
+            box-shadow: rgba(52, 113, 243, 0.45) 0px 5px 10px;
             color: #ffffff;
         }
     }
     .family {
         .btn-primary {
             background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
+            box-shadow: rgba(41, 148, 5, 0.45) 0px 5px 10px;
             color: #ffffff;
         }
     }
