--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -143,9 +143,9 @@
                 .ant-menu-submenu:hover {
                     .profile {
                         img {
-                            border: 2px solid #ed8439 !important;
+                            border: 1px solid #ed8439 !important;
                             box-shadow: 0px 0px 4px #ed8439;
-                            border-radius: 8px;
+                            // border-radius: 8px;
                         }
                     }
                     .setting {
@@ -570,7 +570,7 @@
                 }
                 .profile {
                     img {
-                        border: 2px solid #ed8439 !important;
+                        border: 1px solid #ed8439 !important;
                         box-shadow: 0px 0px 4px #ed8439;
                         border-radius: 8px;
                     }
