--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -32,9 +32,9 @@
         }
 
         .status {
+            margin-top: 10px;
+            // max-width: 580px;
             // width: 100%;
-            margin-top: 40px;
-            max-width: 580px;
             // margin-left: 40px;
         }
 
