--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -17,3 +17,4 @@
 @import "../home/storySlider/storyProfile";
 @import "../home/storySlider/storyReply";
 @import "../home/storySlider/storyTimer";
+@import "../dashBoard/searchbar";
