--- a/component/re-usabelComponent/friendsList/requestCard/index.scss
+++ b/component/re-usabelComponent/friendsList/requestCard/index.scss
@@ -89,7 +89,7 @@
         .btn-primary {
             color: #010010;
             background: white;
-
+            box-shadow: 0px 2px 5px #eaeaea;
             margin-top: 5px;
         }
     }
