--- a/component/nestedComponent/home/storySlider/createStory/index.scss
+++ b/component/nestedComponent/home/storySlider/createStory/index.scss
@@ -40,3 +40,23 @@
         }
     }
 }
+@media screen and (max-width: 1264px) {
+    .CreateStory_main {
+        margin-right: 10px;
+        img {
+            width: 105px !important;
+            height: 150px !important;
+        }
+    }
+}
+@media screen and (max-width: 1221px) {
+    .CreateStory_main {
+        margin-right: 40px;
+        img {
+            width: 135px !important;
+            height: 170px !important;
+        }
+    }
+}
+@media screen and (max-width: 1192px) {
+}
