--- a/component/nestedComponent/home/storySlider/homeStories/index.scss
+++ b/component/nestedComponent/home/storySlider/homeStories/index.scss
@@ -45,3 +45,39 @@
         }
     }
 }
+@media screen and (max-width: 1264px) {
+    .hide5 {
+        display: none !important;
+    }
+    .story_main {
+        width: 105px !important;
+        height: 150px !important;
+    }
+}
+@media screen and (max-width: 1221px) {
+    .hide4 {
+        display: none !important;
+    }
+    .story_main {
+        width: 135px !important;
+        height: 170px !important;
+    }
+}
+@media screen and (max-width: 1221px) {
+    .hide3 {
+        display: none !important;
+    }
+    .story_main {
+        width: 135px !important;
+        height: 170px !important;
+    }
+}
+// @media screen and (max-width: 1192px) {
+//     .hide3 {
+//         display: none !important;
+//     }
+//     .story_main {
+//         width: 150px !important;
+//         height: 200px !important;
+//     }
+// }
