--- a/component/nestedComponent/home/storySlider/stories/index.scss
+++ b/component/nestedComponent/home/storySlider/stories/index.scss
@@ -1,5 +1,9 @@
 .stories_main {
     display: flex;
+    // width: 100%;
+    justify-content: space-around;
+    // max-width: 580px;
+
     .arrow {
         display: flex;
         align-items: center;
