--- a/component/re-usabelComponent/home/trendingButton/index.scss
+++ b/component/re-usabelComponent/home/trendingButton/index.scss
@@ -14,6 +14,9 @@
         &:hover {
             background: #f7f7f7;
         }
+        &:focus {
+            background: #f7f7f7;
+        }
         p {
             font-weight: 600;
             color: #111111;
