--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -9,7 +9,7 @@
 @import "../home/storySlider/stories";
 @import "../home/storySlider/createStory/createStoryOption";
 @import "../home/storySlider/createStory/createTextStory";
-@import "../home/trending";
+@import "../home/trending/showTrandings";
 @import "../home/homeSponsored/sponsoreds";
 @import "../home/homeSponsored/sponsoredPost";
 @import "../home/storySlider/storyModal";
@@ -18,3 +18,4 @@
 @import "../home/storySlider/storyReply";
 @import "../home/storySlider/storyTimer";
 @import "../dashBoard/searchbar";
+@import "../trending/trendingtabs";
