--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -15,3 +15,4 @@
 @import "../../component/nestedComponent/scss";
 @import "../../component/notification";
 @import "../../component/friendsList";
+@import "../../component/Trending";
