--- a/component/nestedComponent/home/storySlider/stories/index.scss
+++ b/component/nestedComponent/home/storySlider/stories/index.scss
@@ -32,7 +32,7 @@
             background: #ffffff;
             border-radius: 50%;
             &:hover {
-                box-shadow: 2px 2px 1px grey;
+                background: lightgray;
             }
         }
     }
