--- a/component/re-usabelComponent/home/trending/trendingButton/index.scss
+++ b/component/re-usabelComponent/home/trending/trendingButton/index.scss
@@ -13,6 +13,13 @@
         margin-bottom: 8px;
         &:hover {
             background: #f7f7f7;
+            box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+            transform: translateY(-0.25em);
+            // -ms-transform: scale(1.1);
+            // -webkit-transform: scale(1.1);
+            // transform: scale(1.1);
+            outline: black;
+            transition: 0.5s;
         }
         &:focus {
             background: #f7f7f7;
