--- a/component/nestedComponent/friendList/friendsRequest/index.scss
+++ b/component/nestedComponent/friendList/friendsRequest/index.scss
@@ -2,7 +2,7 @@
     // overflow: scroll;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 0 20px 30px 20px;
 
     .request_card {
