--- a/component/re-usabelComponent/friendsList/requestCard/index.scss
+++ b/component/re-usabelComponent/friendsList/requestCard/index.scss
@@ -3,8 +3,9 @@
     max-height: 362px;
     border: 1px solid #e9e8e8;
     border-radius: 20px;
-    // margin-left: 30px;
+
     padding: 8px 8px 8px 8px;
+    margin-bottom: 20px;
 
     .contant {
         .name {
