trending-ui-design

--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -6,4 +6,4 @@
 @import "../friendsList/smallRequestCard";
 @import "../storySlider/createStory/button";
 @import "../home/trending/trendingButton";
-@import "../home/trending/trendingPost";
+@import "../trending/trendingPost";
