--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -495,7 +495,7 @@
         .page {
             width: 100wh;
             // padding: 50px 0px;
-            max-height: 100vh;
+            height: 100vh;
             border: 1px solid rgba(0, 0, 0, 0.07);
             border-radius: 20px;
             // margin-top: 30px;
