--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -73,7 +73,7 @@
         .sponsoreds_main {
             margin-top: 35px;
         }
-        .trending_main {
+        .show_trending_main {
             margin-top: 30px;
         }
         // .request {
