--- a/component/nestedComponent/friendList/topBar/index.scss
+++ b/component/nestedComponent/friendList/topBar/index.scss
@@ -44,6 +44,10 @@
                     background: linear-gradient(90deg, #6dd7a4 0%, rgb(62, 198, 132) 100%);
                     box-shadow: rgba(41, 148, 5, 0.45) 0px 5px 20px;
                 }
+                .allFriend {
+                    background: linear-gradient(90deg, #ef843b 0%, #ffa567 100%);
+                    box-shadow: rgba(232, 154, 9, 0.45) 0px 25px 20px -20px;
+                }
             }
             .ant-tabs-nav-more {
                 display: none;
