--- a/component/nestedComponent/dashBoard/dashboardIcons/icons.scss
+++ b/component/nestedComponent/dashBoard/dashboardIcons/icons.scss
@@ -8,6 +8,11 @@
     align-items: center;
     justify-content: center;
 }
+.logout {
+    svg {
+        fill: #bfbfbf;
+    }
+}
 
 // .search {
 // text-align: center;
