--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -6,4 +6,5 @@
 @import "../friendsList/smallRequestCard";
 @import "../storySlider/createStory/button";
 @import "../home/trending/trendingButton";
+@import "../friendsList/emptyData";
 @import "../trending/trendingPost";
