--- a/component/nestedComponent/friendList/topBar/index.scss
+++ b/component/nestedComponent/friendList/topBar/index.scss
@@ -144,6 +144,7 @@
     .ant-modal-content {
         // width: 100%;
         height: 740px;
+        overflow: auto;
         // width: 100%;
 
         .ant-modal-close {
