--- a/component/re-usabelComponent/friendsList/smallRequestCard/index.scss
+++ b/component/re-usabelComponent/friendsList/smallRequestCard/index.scss
@@ -113,7 +113,7 @@
             background: #bfbfbf;
         }
     }
-    button {
+    .btn-primary {
         border-radius: 12px;
         width: 100%;
         height: 36px;
@@ -121,7 +121,9 @@
         font-size: 12px;
         border: unset;
         color: #ffffff;
-
+        &:hover {
+            font-size: 14px;
+        }
         // margin-top: 20px;
         p {
             margin: unset;
