--- a/component/search/index.scss
+++ b/component/search/index.scss
@@ -7,59 +7,67 @@
         display: none;
     }
     .searchBar_main {
-        margin: 40px;
+        margin: 20px 0 40px 0;
     }
-    .search_Toggel {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
-    .search_post_main {
-        // width: 100%;
-        // display: flex;
-        // flex-wrap: wrap;
-
-        .row {
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-            .column {
-                -ms-flex: 50%;
-                flex: 50%;
-                max-width: 50%;
-
-                .search_post {
-                    width: 100%;
-                    // margin-top: 30px;
-                    padding: 30px;
+    .explore_tab {
+        margin: 0 40px 0 40px;
+        .ant-tabs {
+            .ant-tabs-nav {
+                &::before {
+                    border-color: rgba(0, 0, 0, 0.19);
+                }
+                .ant-tabs-nav-wrap {
+                    justify-content: center;
+                    .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
+                        color: unset;
+                    }
+                    .ant-tabs-tab {
+                        padding: unset;
+                        &:hover {
+                            color: unset;
+                        }
+                    }
+                    .ant-tabs-ink-bar {
+                        background: black;
+                    }
                 }
             }
-        }
-    }
-}
-
-// @media screen and (max-width: 800px) {
-//     .Search-main_page {
-//         .search_post_main {
-//             .row {
-//                 .column {
-//                     -ms-flex: 100%;
-//                     flex: 100%;
-//                     max-width: 100%;
-//                 }
-//             }
-//         }
-//     }
-// }
-@media screen and (max-width: 580px) {
-    .Search-main_page {
-        .search_post_main {
-            .row {
-                .column {
-                    -ms-flex: 100%;
-                    flex: 100%;
-                    max-width: 100%;
+            .ant-tabs-content-holder {
+                margin-top: 10px;
+                .explore_image {
+                    img {
+                        padding: 5px;
+                    }
+                    .big_site {
+                        display: flex;
+                        margin-bottom: -20px;
+                        .small_image {
+                            display: flex;
+                            flex-direction: column;
+                            img {
+                                width: 350px;
+                                height: 350px;
+                            }
+                        }
+                        .big_image {
+                            .big {
+                                width: 700px;
+                            }
+                            .profile_image {
+                                width: 60px;
+                                height: 60px;
+                                margin-top: -115px;
+                                margin-left: 17px;
+                            }
+                        }
+                    }
+                    .small_site {
+                        display: flex;
+                        img {
+                            width: 350px;
+                            height: 360px;
+                        }
+                    }
                 }
             }
         }
