explore-foaf-ui

--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -19,3 +19,4 @@
 @import "../home/storySlider/storyTimer";
 @import "../dashBoard/searchbar";
 @import "../trending/trendingtabs";
+@import "../search/popover";
