--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -8,3 +8,4 @@
 @import "../home/trending/trendingButton";
 @import "../friendsList/emptyData";
 @import "../trending/trendingPost";
+@import "../profile";
