--- a/component/search/index.scss
+++ b/component/search/index.scss
@@ -53,16 +53,18 @@
                             .big {
                                 width: 700px;
                             }
-                            .profile_image {
+
+                            .position {
                                 width: 60px;
                                 height: 60px;
-                                margin-top: -115px;
+                                margin-top: -80px;
                                 margin-left: 17px;
                             }
                         }
                     }
                     .small_site {
                         display: flex;
+                        margin-top: 20px;
                         img {
                             width: 350px;
                             height: 360px;
