--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -1,4 +1,3 @@
-@import "../search/searchBar";
 @import "../notification/notificationHeading";
 @import "../friendList/topBar";
 @import "../friendList/friendsRequest";
@@ -19,4 +18,5 @@
 @import "../home/storySlider/storyTimer";
 @import "../dashBoard/searchbar";
 @import "../trending/trendingtabs";
-@import "../search/popover";
+@import "../explore/popover";
+@import "../search";
