--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -9,3 +9,6 @@
 @import "../friendsList/emptyData";
 @import "../trending/trendingPost";
 @import "../profile";
+@import "../searchBar";
+@import "../search/card";
+@import "../search/button";
