--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -11,8 +11,9 @@
 @import "../../component/nestedComponent/home/homeMobileStories";
 @import "../../component/nestedComponent/home/toggelmobile";
 @import "../../component/re-usabelComponent/scss";
-@import "../../component/search/";
+@import "../../component/explore";
 @import "../../component/nestedComponent/scss";
 @import "../../component/notification";
 @import "../../component/friendsList";
 @import "../../component/Trending";
+@import "../../component/search";
