--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -19,4 +19,6 @@
 @import "../dashBoard/searchbar";
 @import "../trending/trendingtabs";
 @import "../explore/popover";
-@import "../search";
+@import "../search/tabs";
+@import "../search/autoComplete";
+@import "../search/tabs/eventOption";
