--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -12,3 +12,7 @@
 @import "../searchBar";
 @import "../search/card";
 @import "../search/button";
+@import "../search/card/imageComponent/placesIcone";
+@import "../search/card/imageComponent/eventsIcon";
+@import "../search/switch";
+@import "../search/dropDown";
