--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -18,7 +18,8 @@
 @import "../home/storySlider/storyTimer";
 @import "../dashBoard/searchbar";
 @import "../trending/trendingtabs";
-@import "../explore/popover";
 @import "../search/tabs";
 @import "../search/autoComplete";
 @import "../search/tabs/eventOption";
+@import "../explore/exploreTab/popover";
+@import "../explore/exploreTab";
