--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -16,3 +16,5 @@
 @import "../search/card/imageComponent/eventsIcon";
 @import "../search/switch";
 @import "../search/dropDown";
+@import "../search/vedioCard";
+@import "../search/groupCard";
