--- a/component/nestedComponent/search/autoComplete/index.scss
+++ b/component/nestedComponent/search/autoComplete/index.scss
@@ -2,6 +2,8 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    margin: 30px 0 30px 0;
+
     .ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector {
         border-color: red !important;
         box-shadow: unset;
