--- a/component/nestedComponent/search/tabs/index.scss
+++ b/component/nestedComponent/search/tabs/index.scss
@@ -2,7 +2,7 @@
     .ant-tabs {
         .ant-tabs-content-holder {
             overflow: auto;
-            max-height: 818px;
+            max-height: 795px;
             &::-webkit-scrollbar {
                 display: none;
             }
@@ -98,4 +98,12 @@
             padding-bottom: 0px !important;
         }
     }
+}
+
+.group_main {
+    width: 100%;
+    padding: 0 80px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
