--- a/component/re-usabelComponent/search/button/index.scss
+++ b/component/re-usabelComponent/search/button/index.scss
@@ -8,7 +8,13 @@
         border: none;
         font-weight: 600;
     }
-    // .btn-primary {
-    //     border: none;
-    // }
+}
+.group {
+    .btn {
+        margin-top: 20px;
+        width: 100%;
+        height: 36px;
+        border-radius: 7px;
+        font-size: 14px;
+    }
 }
